release 20.1.2
updated log4j to version 2.13.2 [CVE-2020-9488]
resolves @149: Admin Console Logs me out when Removing App
resolves @156: fix resize after webswing-element is inits with 0 size
resolves @157: Allow using complex custom args as variables in webswing.config
resolves @144: REST API for number of active sessions
resolves @154: Application stops responding if WebWindow.handleWebActionEvent blocks
resolves @155: CORS protection not in effect when using local admin console
resolves @151: Session recording not recording all frames
resolves @152: Mouse over open combobox closes the combobox in CWM
resolves @150: Unclosed directory streams of screenshot folders in automated testing
resolves @137: for the specific use case
resolves @147: system properties for graphs customization
resolves @148: session view not showing application correctly(resolves #382)
resolves @140: Java 11 module system warnings
resolves @146: Regression: IME supports Chinese<EF><BC><9F>(resolves #390)
resolves @136: button doesn't exist 0 - again
resolves @142: Exceptions when undocking window
